fixed navbar z-index positioning issue

--- a/browser/scss/directives/navbar.scss
+++ b/browser/scss/directives/navbar.scss
@@ -35,7 +35,9 @@
             }
 
             .list-container {
-                display: flex;
+				padding: 0px 10px;
+				width: 161px;
+				display: flex;
                 justify-content: center;
                 flex-direction: column;
 
