--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -17,8 +17,6 @@ div {
 * {
 	margin: 0;
 	font-family: 'Lato', 'open-sans';
-	z-index: 100;
-
 }
 
 section {
